Switch to AEM Mocks 2.7.0 with Content Policy Support
- updated JUnit tests for Title, Accordion, Breadcrumb, Button, Carousel, Download, Text and Title to support the new content policy support in the next AEM Mocks release and to switch to JUnit5